fixed spacing & sizing issues

--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -1,6 +1,7 @@
 .footer {
   display: flex;
+  height: 1.5em;
   padding: 0.5em;
   background-color: bisque;
-  font-size: 0.6em;
+  font-size: 0.5em;
 }
